[gd_scene load_steps=2 format=3 uid="uid://dubcd60cprcpp"]

[ext_resource type="Script" path="res://components/BuildMenu.gd" id="1_rasdc"]

[node name="BuildMenu" type="Node2D"]
script = ExtResource("1_rasdc")

[node name="CreateFactory" type="Button" parent="."]
offset_left = 5.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = -5.0
text = "Factory"

[node name="CreateLight" type="Button" parent="."]
offset_left = -75.0
offset_top = -40.0
offset_right = -5.0
offset_bottom = -5.0
text = "Light"

[node name="CreateGenerator" type="Button" parent="."]
offset_left = -50.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 40.0
text = "Generator"

[connection signal="pressed" from="CreateFactory" to="." method="_on_create_factory_pressed"]
[connection signal="pressed" from="CreateLight" to="." method="_on_create_light_pressed"]
[connection signal="pressed" from="CreateGenerator" to="." method="_on_create_generator_pressed"]
